fix: cell text align between normal and edit mode

--- a/packages/sheets-ui/src/views/editor-container/index.module.less
+++ b/packages/sheets-ui/src/views/editor-container/index.module.less
@@ -11,6 +11,7 @@
 
     border: 1px solid rgb(var(--primary-color));
     box-shadow: none;
+    box-sizing: border-box;
 
     .editor-input {
         position: relative;
